--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,11 @@
 [DEFAULT]
-keywords = ['airpods', 'sealed']
-exclusions = ['case']
+keywords = airpods,pro
+exclusions = case
 maxprice = 100
 minprice = 0
 enablefacebook = false
+where = 
+; keep where null for anywhere
+interval = 5
+; every minutes the bot should scrape
 
