--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,9 @@ exclusions = case
 maxprice = 100
 minprice = 0
 enablefacebook = false
+enablekijiji = false
+facebookcityid = 110941395597405
+; facebook use the id of the closest city to you for the searches, if not set it will return no ads
 interval = 5
 ; every minutes the bot should scrape
 
