--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,8 @@ maxprice = 100
 minprice = 0
 enablefacebook = false
 enablekijiji = false
+enableebay = false
+enableamazon = false
 facebookcityid = 110941395597405
 ; facebook use the id of the closest city to you for the searches, if not set it will return no ads
 interval = 5
