--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,7 @@ enablefacebook = false
 enablekijiji = false
 enableebay = false
 enableamazon = false
+enablelespacs = false
 facebookcityid = 110941395597405
 ; facebook use the id of the closest city to you for the searches, if not set it will return no ads
 interval = 5
