--- a/config.ini
+++ b/config.ini
@@ -3,13 +3,14 @@ keywords = airpods,pro
 exclusions = case
 maxprice = 100
 minprice = 0
-enablefacebook = false
-enablekijiji = false
-enableebay = false
-enableamazon = false
-enablelespacs = false
+enablefacebook = True
+enablekijiji = True
+enableebay = True
+enableamazon = True
+enablelespacs = True
+strictmode = True
 facebookcityid = 110941395597405
 ; facebook use the id of the closest city to you for the searches, if not set it will return no ads
-interval = 5
+interval = 10
 ; every minutes the bot should scrape
 
