Update for facebook

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 [DEFAULT]
 keywords = airpods pro
 exclusions = case
-maxprice = 100
-minprice = 0
+maxprice = 160
+minprice = 100
 enablefacebook = True
 enablekijiji = True
 enableebay = True
@@ -13,4 +13,10 @@ facebookcityid = 110941395597405
 ; facebook use the id of the closest city to you for the searches, if not set it will return no ads
 interval = 10
 ; every minutes the bot should scrape
+
+[FACEBOOK]
+date_listed = 1
+; 0 = off, 1 = last 24h, 7 = days and 30 = 30 days
+sortby = distance_ascend
+; best_match, distance_ascend, creation_time_descend, price_ascend, price_descend
 
