--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 Keywords = airpods pro
 Exclusions = case
 StrictMode = True
-
+Interval = 1
 
 [FACEBOOK]
 Enabled = True
@@ -11,3 +11,12 @@ MinPrice = 0
 MaxPrice = 1000
 SortBy = distance_ascend
 ; best_match, price_ascend, price_descend, distance_ascend, creation_time_descend
+
+[KIJIJI]
+Enabled = True
+CityUrl = 
+Identifier = 
+MinPrice = 0
+MaxPrice = 1000
+Type = ownr
+; ownr, delr, all
