Commit empty config

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 Keywords = airpods pro
 Exclusions = case
-StrictMode = True
+StrictMode = False
 Interval = 1
 
 [FACEBOOK]
@@ -13,10 +13,22 @@ SortBy = distance_ascend
 ; best_match, price_ascend, price_descend, distance_ascend, creation_time_descend
 
 [KIJIJI]
-Enabled = True
+Enabled = False
 CityUrl = 
 Identifier = 
-MinPrice = 0
-MaxPrice = 1000
+MinPrice = 20
+MaxPrice = 100
 Type = ownr
 ; ownr, delr, all
+
+[EBAY]
+Enabled = True
+MinPrice = 20
+MaxPrice = 100
+
+[LESPACS]
+Enabled = True
+MinPrice = 0
+MaxPrice = 1000
+City = montreal
+Distance = 200
